--- a/arch/arm64/configs/bahamut_defconfig
+++ b/arch/arm64/configs/bahamut_defconfig
@@ -23,6 +23,7 @@ CONFIG_SBALANCE_EXCLUDE_CPUS="3,7"
 CONFIG_PELT_UTIL_HALFLIFE_16=y
 # CONFIG_PELT_UTIL_HALFLIFE_8 is not set
 CONFIG_DYNAMIC_FSYNC=y
+CONFIG_DISABLE_TRACE_PRINTK=y
 # BY KOCHENG
 CONFIG_HOTPLUG_SIZE_BITS=29
 CONFIG_LOCALVERSION="-Re:EI-bahamut-LTS-v1.6"
