--- a/arch/arm64/configs/bahamut_defconfig
+++ b/arch/arm64/configs/bahamut_defconfig
@@ -1,6 +1,7 @@
 # MODDING
 CONFIG_IOSCHED_ANXIETY=y
 CONFIG_DEFAULT_ANXIETY=y
+CONFIG_KERNEL_MODE_NEON=y
 # BY KOCHENG
 CONFIG_HOTPLUG_SIZE_BITS=29
 CONFIG_LOCALVERSION="-perf"
@@ -112,6 +113,7 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
+CONFIG_UNIX_SCM=y
 CONFIG_XFRM_USER=y
 CONFIG_XFRM_INTERFACE=y
 CONFIG_XFRM_STATISTICS=y
