Defconfig: enable adreno idler

--- a/arch/arm64/configs/bahamut_defconfig
+++ b/arch/arm64/configs/bahamut_defconfig
@@ -3,6 +3,7 @@ CONFIG_IOSCHED_ANXIETY=y
 CONFIG_DEFAULT_ANXIETY=y
 CONFIG_KERNEL_MODE_NEON=y
 CONFIG_DRM_MSM_KCAL_CTRL=y
+CONFIG_ADRENO_IDLER=y
 # BY KOCHENG
 CONFIG_HOTPLUG_SIZE_BITS=29
 CONFIG_LOCALVERSION="-perf"
