--- a/arch/arm64/configs/griffin_defconfig
+++ b/arch/arm64/configs/griffin_defconfig
@@ -4,6 +4,8 @@ CONFIG_DEFAULT_ANXIETY=y
 CONFIG_KERNEL_MODE_NEON=y
 CONFIG_DRM_MSM_KCAL_CTRL=y
 CONFIG_ADRENO_IDLER=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_SIMPLE_GPU_ALGORITHM=y
 # BY KOCHENG
 CONFIG_HOTPLUG_SIZE_BITS=29
 CONFIG_LOCALVERSION="-perf"
