--- a/arch/arm64/configs/griffin_defconfig
+++ b/arch/arm64/configs/griffin_defconfig
@@ -6,6 +6,7 @@ CONFIG_DRM_MSM_KCAL_CTRL=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
+CONFIG_ZRAM_SIZE_OVERRIDE=5
 # BY KOCHENG
 CONFIG_HOTPLUG_SIZE_BITS=29
 CONFIG_LOCALVERSION="-perf"
