defconfig: introduce Re:EI LTS v1.0

--- a/arch/arm64/configs/bahamut_defconfig
+++ b/arch/arm64/configs/bahamut_defconfig
@@ -9,7 +9,7 @@ CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_ZRAM_SIZE_OVERRIDE=5
 # BY KOCHENG
 CONFIG_HOTPLUG_SIZE_BITS=29
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-Re:EI-bahamut-LTS-v1.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
