defconfig: enable CASS

--- a/arch/arm64/configs/bahamut_defconfig
+++ b/arch/arm64/configs/bahamut_defconfig
@@ -8,6 +8,7 @@ CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_ZRAM_SIZE_OVERRIDE=5
 CONFIG_THINLTO=y
+CONFIG_SCHED_CASS=y
 # BY KOCHENG
 CONFIG_HOTPLUG_SIZE_BITS=29
 CONFIG_LOCALVERSION="-Re:EI-bahamut-LTS-v1.0"
