--- a/arch/arm64/configs/bahamut_defconfig
+++ b/arch/arm64/configs/bahamut_defconfig
@@ -9,6 +9,10 @@ CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_ZRAM_SIZE_OVERRIDE=5
 CONFIG_THINLTO=y
 CONFIG_SCHED_CASS=y
+# efficient
+CONFIG_PM=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+#################################################
 # BY KOCHENG
 CONFIG_HOTPLUG_SIZE_BITS=29
 CONFIG_LOCALVERSION="-Re:EI-bahamut-LTS-v1.0"
