defconfig: add SBalance

--- a/arch/arm64/configs/griffin_defconfig
+++ b/arch/arm64/configs/griffin_defconfig
@@ -13,6 +13,8 @@ CONFIG_PM=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_POWERSUSPEND=y
 #################################################
+CONFIG_IRQ_SBALANCE=y
+CONFIG_SBALANCE_EXCLUDE_CPUS="3,7"
 # BY KOCHENG
 CONFIG_HOTPLUG_SIZE_BITS=29
 CONFIG_LOCALVERSION="-Re:EI-griffin-LTS-v1.1"
