--- a/arch/arm64/configs/griffin_defconfig
+++ b/arch/arm64/configs/griffin_defconfig
@@ -1,12 +1,12 @@
 # MODDING
 CONFIG_IOSCHED_ANXIETY=y
-CONFIG_DEFAULT_ANXIETY=y
+# CONFIG_DEFAULT_ANXIETY is not set
 CONFIG_KERNEL_MODE_NEON=y
 CONFIG_DRM_MSM_KCAL_CTRL=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
-CONFIG_ZRAM_SIZE_OVERRIDE=5
+CONFIG_ZRAM_SIZE_OVERRIDE=3
 CONFIG_THINLTO=y
 # efficient
 CONFIG_PM=y
