defconfig: enable CASS

--- a/arch/arm64/configs/bahamut_defconfig
+++ b/arch/arm64/configs/bahamut_defconfig
@@ -8,6 +8,9 @@ CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_ZRAM_SIZE_OVERRIDE=3
 CONFIG_THINLTO=y
+# CONFIG CASS 
+CONFIG_SCHED_CASS=y
+#################################################
 # efficient
 CONFIG_PM=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
