defconfig: disable ikheaders

--- a/arch/arm64/configs/griffin_defconfig
+++ b/arch/arm64/configs/griffin_defconfig
@@ -18,6 +18,7 @@ CONFIG_POWERSUSPEND=y
 #################################################
 CONFIG_IRQ_SBALANCE=y
 CONFIG_SBALANCE_EXCLUDE_CPUS="3,7"
+# CONFIG_IKHEADERS is not set
 # BY KOCHENG
 CONFIG_HOTPLUG_SIZE_BITS=29
 CONFIG_LOCALVERSION="-Re:EI-griffin-LTS-v1.4"
